# cycle-predictor

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  PORTING.md  README.md  RESULTS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: model.json  test_vectors.json
data/: DATASETS.md
data/raw/: download_manifest.json
ports/: README.md
ports/kotlin/: CyclePredictor.kt  Validate.kt
ports/swift/: Package.swift
ports/swift/Sources/CyclePredictor/: CyclePredictor.swift  PeriodForecast.swift
ports/swift/Sources/Validate/: main.swift
ports/typescript/: cyclePredictor.ts  package.json  validate.ts
research/: RESEARCH.md  papers.csv
research/papers/: README.md  html_manifest.json  manifest.json
scripts/: _common.py  analyze_signals_mcphases.py  demo_skip_robustness.py  eda_fedcycle.py  eval_baselines.py  eval_models.py  eval_unified.py  export_model.py  fetch_arxiv_html.py  fetch_datasets.py  fetch_pdfs.py  gen_test_vectors.py
src/cycle_predictor/: __init__.py  api.py  eval.py  portable.py
src/cycle_predictor/data/: __init__.py  fedcycle.py  mcphases.py  mcphases_signals.py
src/cycle_predictor/models/: __init__.py  baselines.py  generative.py  hierarchical.py  ovulation.py  twophase.py  unified.py
tests/: test_api.py  test_eval.py  test_fedcycle_adapter.py  test_generative.py  test_hierarchical.py  test_mcphases_adapter.py  test_mcphases_signals.py  test_ovulation.py  test_portable.py  test_twophase.py  test_unified.py
