[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cycle-predictor"
version = "0.0.1"
description = "ML menstrual cycle predictor (next period / fertile window forecasting)"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["slow: tests that run PyMC sampling"]
